add materialize css library, responsive card layout with product image/name/price

--- a/src/app/product-feed/product-feed.component.html
+++ b/src/app/product-feed/product-feed.component.html
@@ -1,3 +1,9 @@
 <div>
-  <app-product-item></app-product-item>
+  product list
+  <div class="row">
+    <div *ngFor="let product of products">
+      <app-product-item [productData]='product' class="col s12 m6 l3"></app-product-item>
+    </div>
+
+  </div>
 </div>
