--- a/src/app/product-item/product-item.component.html
+++ b/src/app/product-item/product-item.component.html
@@ -1,3 +1,15 @@
-<p>
-  product-item works!
-</p>
+<div class="row">
+  <div class="col s12 m12 l12">
+    <div class="card">
+      <div class="card-image">
+        <img src={{productData.mainImage.ref}}>
+      </div>
+      <div class="card-content">
+      </div>
+      <div class="card-action">
+        <h5>{{productData.name}}</h5>
+        <p>${{productData.priceInDollars}}</p>
+      </div>
+    </div>
+  </div>
+</div>
