add date to product item, add sort by name/date/price/asc/desc functionality

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,7 @@
 <div>
   <app-nav-bar></app-nav-bar>
-  <app-product-filters></app-product-filters>
-  <app-product-feed></app-product-feed>
+  <div>
+    <app-product-feed class="col s12 m6 l3"></app-product-feed>
+  </div>
+
 </div>
