--- a/src/app/product-feed/product-feed.component.html
+++ b/src/app/product-feed/product-feed.component.html
@@ -1,5 +1,7 @@
 <div>
-  product list
+  <div class="row">
+    <app-product-filters (sortChoosen)="sortFeed($event)" class="col s12 m6 l3"></app-product-filters>
+  </div>
   <div class="row">
     <div *ngFor="let product of products">
       <app-product-item [productData]='product' class="col s12 m6 l3"></app-product-item>
