--- a/src/app/product-item/product-item.component.html
+++ b/src/app/product-item/product-item.component.html
@@ -9,6 +9,7 @@
       <div class="card-action">
         <h5>{{productData.name}}</h5>
         <p>${{productData.priceInDollars}}</p>
+        <p>Posted At: {{productData.createdAt | date:'short'}}</p>
       </div>
     </div>
   </div>
