--- a/src/app/product-feed/product-feed.component.html
+++ b/src/app/product-feed/product-feed.component.html
@@ -1,4 +1,5 @@
 <div>
+  <h2 class="center">Products</h2>
   <div class="row">
     <app-product-filters (sortChoosen)="sortFeed($event)" (filterChoosen)="filterFeed($event)" class="col s12 m12 l12"></app-product-filters>
   </div>
