refactor filter event. clean up and comment code

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,3 +1,6 @@
-<div class="row">
-  <img alt="LOGO HERE">
-</div>
+<!-- Navigation bar -->
+<nav>
+  <div class="nav-wrapper">
+    <a href="#!" class="brand-logo">FUJI WATER</a>
+  </div>
+</nav>
