re-arrange file structure, update readme, clean up code and comments

--- a/src/app/home/nav-bar/nav-bar.component.html
+++ b/src/app/home/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <!-- Navigation bar -->
 <nav>
   <div class="nav-wrapper">
-    <a href="#!" class="brand-logo">FUJI WATER</a>
+    <a href="#!" class="brand-logo">FIJI WATER</a>
   </div>
 </nav>
