fix products display if user deletes phrase after initial input

--- a/src/app/home/product-feed/product-filters/product-filters.component.html
+++ b/src/app/home/product-feed/product-filters/product-filters.component.html
@@ -38,7 +38,7 @@
       <input type="number"
         pattern="^\d{1,8}(?:\.\d{1,2})?$"
         [(ngModel)]="max"
-        (ngModelChange)="onPriceFilterChange($event)"
+        (ngModelChange)="onPriceFilterChange()"
         id="price-max"
         type="text"
         class="form-control validate"
@@ -56,7 +56,7 @@
       <input type="text"
         pattern="/^[A-Za-z]+$/"
         [(ngModel)]="phrase"
-        (ngModelChange)="onPhraseFilterChange($event)"
+        (ngModelChange)="onPhraseFilterChange()"
         placeholder="Words"
         id="word-filter"
         class="form-control validate"
